FRONTEND: Added header and footer implementation.

--- a/src/ucep-client/src/index.css
+++ b/src/ucep-client/src/index.css
@@ -15,7 +15,7 @@
 }
 
 h1, h2, h3, h4, h5, h6, th, thead {
-  font-family: "Roboto Serif", serif;
+  font-family: "Poppins","Roboto Serif", serif;
 }
 
 code {
